Bugfix: Squash large blank space at bottom of edit page

--- a/themes/default/theme.css
+++ b/themes/default/theme.css
@@ -115,8 +115,9 @@ a.interwiki_link { color: var(--accent-d1); }
 .search-result-badges { font-size: 1rem; font-weight: normal; }
 .search-context { min-height: 3em; max-height: 20em; overflow: hidden; }
 
+.editform { position: relative; }
 textarea[name=content] { resize: none; }
-.fit-text-mirror { position: absolute; left: -10000vw; word-wrap: break-word; white-space: pre-wrap; }
+.fit-text-mirror { position: absolute; top: 0; left: -10000vw; word-wrap: break-word; white-space: pre-wrap; }
 main label:not(.link-display-label) { display: inline-block; min-width: 16rem; }
 input[type=text]:not(.link-display), input[type=password], input[type=url], input[type=email], input[type=number], textarea { margin: 0.5rem 0; }
 input[type=text], input[type=password], input[type=url], input[type=email], input[type=number], textarea, textarea[name=content] + pre, #search-box { padding: 0.5rem 0.8rem; background: hsl(var(--accent-a0)); border: 0; border-radius: 0.3rem; font-size: 1rem; color: var(--accent-a3); }
